added glyphicon to buttons and time-block class to rows

--- a/index.html
+++ b/index.html
@@ -23,66 +23,66 @@
 
         <div class="row time-block">
             <label class="hour col-1">
-                9AM
+                9AM</i>
             </label>
             <textarea name="" id="" rows="4" class="col-10"></textarea>
-            <button class="saveBtn col-1"></button>
+            <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
-        <div class="row">
+        <div class="row time-block">
             <label class="hour col-1">
                 10AM
             </label>
-            <textarea name="" id="" rows="4" class="col-10"></textarea>
-            <button class="saveBtn col-1"></button>
+            <textarea name="" id="" rows="4" class="col-10 "></textarea>
+            <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
-        <div class="row">
+        <div class="row time-block">
             <label class="hour col-1">
                 11AM
             </label>
             <textarea name="" id="" rows="4" class="col-10"></textarea>
-            <button class="saveBtn col-1"></button>
+            <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
-        <div class="row">
+        <div class="row time-block">
             <label class="hour col-1">
                 12PM
             </label>
             <textarea name="" id="" rows="4" class="col-10"></textarea>
-            <button class="saveBtn col-1"></button>
+            <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
-        <div class="row">
+        <div class="row time-block">
             <label class="hour col-1">
                 1PM
             </label>
             <textarea name="" id="" rows="4" class="col-10"></textarea>
-            <button class="saveBtn col-1"></button>
+            <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
-        <div class="row">
+        <div class="row time-block">
             <label class="hour col-1">
                 2PM
             </label>
             <textarea name="" id="" rows="4" class="col-10"></textarea>
-            <button class="saveBtn col-1"></button>
+            <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
-        <div class="row">
+        <div class="row time-block">
             <label class="hour col-1">
                 3PM
             </label>
             <textarea name="" id="" rows="4" class="col-10"></textarea>
-            <button class="saveBtn col-1"></button>
+            <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
-        <div class="row">
+        <div class="row time-block">
             <label class="hour col-1">
                 4PM
             </label>
             <textarea name="" id="" rows="4" class="col-10"></textarea>
-            <button class="saveBtn col-1"></button>
+            <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
-        <div class="row">
+        <div class="row time-block">
             <label class="hour col-1">
                 5PM
             </label>
             <textarea name="" id="" rows="4" class="col-10"></textarea>
-            <button class="saveBtn col-1"></button>
+            <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
