setup display based on the three ghosts of christmas

--- a/index.html
+++ b/index.html
@@ -25,63 +25,63 @@
             <label class="hour col-1">
                 9AM</i>
             </label>
-            <textarea name="" id="" rows="4" class="col-10"></textarea>
+            <textarea name="" id="" rows="4" class="col-10" data-time="09"></textarea>
             <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
         <div class="row time-block">
             <label class="hour col-1">
                 10AM
             </label>
-            <textarea name="" id="" rows="4" class="col-10 "></textarea>
+            <textarea name="" id="" rows="4" class="col-10" data-time="10"></textarea>
             <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
         <div class="row time-block">
             <label class="hour col-1">
                 11AM
             </label>
-            <textarea name="" id="" rows="4" class="col-10"></textarea>
+            <textarea name="" id="" rows="4" class="col-10" data-time="11"></textarea>
             <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
         <div class="row time-block">
             <label class="hour col-1">
                 12PM
             </label>
-            <textarea name="" id="" rows="4" class="col-10"></textarea>
+            <textarea name="" id="" rows="4" class="col-10" data-time="12"></textarea>
             <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
         <div class="row time-block">
             <label class="hour col-1">
                 1PM
             </label>
-            <textarea name="" id="" rows="4" class="col-10"></textarea>
+            <textarea name="" id="" rows="4" class="col-10" data-time="13"></textarea>
             <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
         <div class="row time-block">
             <label class="hour col-1">
                 2PM
             </label>
-            <textarea name="" id="" rows="4" class="col-10"></textarea>
+            <textarea name="" id="" rows="4" class="col-10" data-time="14"></textarea>
             <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
         <div class="row time-block">
             <label class="hour col-1">
                 3PM
             </label>
-            <textarea name="" id="" rows="4" class="col-10"></textarea>
+            <textarea name="" id="" rows="4" class="col-10" data-time="15"></textarea>
             <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
         <div class="row time-block">
             <label class="hour col-1">
                 4PM
             </label>
-            <textarea name="" id="" rows="4" class="col-10"></textarea>
+            <textarea name="" id="" rows="4" class="col-10" data-time="16"></textarea>
             <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
         <div class="row time-block">
             <label class="hour col-1">
                 5PM
             </label>
-            <textarea name="" id="" rows="4" class="col-10"></textarea>
+            <textarea name="" id="" rows="4" class="col-10" data-time="17"></textarea>
             <button class="saveBtn col-1"><i class="fa fa-lock"></i></button>
         </div>
     </div>
